@@ -38,6 +38,7 @@ Version 1.0.xxx (May xxth 2013)
 - Changed: ignoring illegal Raspberry temperature (85/-273)
 - Fixed: Scenes with a Push On type switch will now only send the On command to this switch
 - Fixed: Possible timer problem duo sunset/sunrise reloading issues
+- Implemented: Device type Blinds
 
 Version 1.0.484 (April 28th 2013)
 - Implemented: Raspberry Pi, updating via the web browser (Settings Tab)
